  use option disk_io='high' in cp.x to save the charge density,
  read the charge density so produced with pw.x, specifying option
  "calculation='nscf'" or "calculation='bands'"
* "xc_type" input variable in cp.x replaced by "input_dft" (as in pw.x)
* ortho_para variable removed from input 
  Use command-line option "-ndiag N" or "-northo N" instead

New in CVS version:

  * Removal of duplicated and unused routines
  * Major reorganization of CVS itself: external packages no longer in CVS
  * New package GWW for GW calculations with Wannier functions
  * Grid parallelization for the phonon code, code cleanup
  * Better OpenMP+MPI parallelization
  * Real-space PP non-local projectors (experimental)
  * Martyna-Tuckerman algorithm for isolated systems
  * Better q=>0 limit for Exact-Exchange calculations
  * HSE functional
  * Bug fixes and output cleanup for cp.x autopilot

Fixed in version 4.1.2:

  * call to invsym with overlapping input and output matrix could 
    result in bogus error message

  * cp.x: update of dt with autopilot wasn't working

  * wavefunctions for extrapolation written to wfcdir and not to outdir

  * Some constraints were not working in solids, due to an incorrect
    estimate of the maximum possible distance between two atoms

  * Parallel execution of D3 wasn't working in at least some cases
    (e.g. with k-point parallelization) since a long time

  * restart of phonon code with PAW wasn't working

Fixed in version 4.1.1:

  * newly added DFT-D wasn't working properly with k-point parallelization

  * Gamma-only phonon code wasn't working any longer if pseudopotentials
    with nonlinear core correction were used

  * Check of lspinorb flag consistency between left/right lead and
    scattering region in pwcond.x was not working properly; wrong
    print-out of E-Ef when Nchannels=0 also fixed.

  * Check on convergence of variable-cell damped dynamics was not
    working as expected in the presence of constraints
